@@ -22,6 +22,7 @@
  * Updated text under Slice Members on slice page (#1050)
  * Cleaned up Jacks Viewer implementation on listresources (#1051)
  * Rename omni-bundle.zip to omni.bundle (#929)
+ * Fix variable name in WiMAX error messages. (#1053)
 
 == 2.15 ==
  * backend changes to support managing aggregates on slice page (#339)
